fix: align style and image

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ main.overlay, footer.overlay {
     display: grid;
     grid-auto-flow: column;
     gap: 2rem;
-    padding: 0 3rem 0 3rem;
+    margin: 0 1.5rem 0 1.5rem;
     overflow-x: scroll;
 }
 
@@ -609,7 +609,7 @@ footer{
     }
 
     #carousel{
-        padding: 0;
+        margin: 0;
         gap: 2rem;
     }
 
